--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             <div class="col-sm-4">
                 <div class="team-member">
                     <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-                    <h4>Larry Parker</h4>
-                    <p class="text-muted">Lead Marketer</p>
+                    <h4>Gal Jacobovich</h4>
+                    <p class="text-muted">programmer</p>
                     <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
                             <a href="#">
